# massmove

./: README.md
doc/mass_move_executable/: all.html  fn.main.html  index.html  struct.Args.html
doc/mass_move_lib/: all.html  index.html  sidebar-items.js
doc/mass_move_lib/build_by_target_pattern/: fn.build_by_target_pattern.html  fn.rebuild_string_by_patterns.html  index.html  sidebar-items.js
doc/mass_move_lib/mass_move/: fn.find_existing_file.html  fn.mass_move.html  index.html  sidebar-items.js
doc/mass_move_lib/search_by_pattern/: fn.search_file_names_by_pattern.html  index.html  sidebar-items.js
doc/mass_move_lib/string_pattern/: index.html  sidebar-items.js  struct.StringPattern.html
mmv/: Cargo.toml
mmv/src/lib/: build_by_target_pattern.rs  lib.rs  mass_move.rs  search_by_pattern.rs  string_pattern.rs
mmv/tests/: tests.rs
