[package]
name = "mmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mass_move_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "mass_move_executable"
path = "src/bin/main.rs"

[dependencies]
regex = "1.10.2"
tempfile = "3.8.1"
clap = { version = "4.4.7", features = ["derive"] }
